fix(ui): fix accordion overflow hidden, fix select defaultValue, fix sheet in dropdown

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -20,7 +20,7 @@
     --secondary-foreground: 0 0% 9%;
 
     --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 70.1%;
+    --muted-foreground: 0 0% 45.1%;
 
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
